--- a/composer.json
+++ b/composer.json
@@ -2,10 +2,13 @@
     "name": "oxl/delivery",
     "description": " 'Deliver With Econt' implementation model",
     "config": {
-        "sort-packages": true
+        "sort-packages": true,
+        "allow-plugins": {
+            "dealerdirect/phpcodesniffer-composer-installer": true
+        }
     },
     "require": {
-        "php": "~7.1.3||~7.2.0",
+        "php": "^8.1",
         "magento/framework": "102.0.*",
         "magento/module-backend": "101.0.*",
         "magento/module-catalog": "103.0.*",
@@ -17,7 +20,6 @@
         "magento/module-shipping": "100.3.*",
         "magento/module-store": "101.0.*"        
     },
-    
     "type": "magento2-module",
     "license": [
         "OSL-3.0",
