Change license to MIT

--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
     },
     "type": "magento2-module",
     "license": [
-        "OSL-3.0",
-        "AFL-3.0"
+        "MIT"
     ],
     "minimum-stability": "stable",
     "autoload": {
