--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "oxl/delivery",
+    "name": "econt/magento2-delivery",
     "description": "'Deliver With Econt' implementation model",
     "config": {
         "sort-packages": true
