--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,9 @@
         "magento/module-shipping": "100.4.*",
         "magento/module-store": "101.1.*"
     },
+    "require-dev": {
+        "magento/magento-coding-standard": "^38"
+    },
     "type": "magento2-module",
     "license": [
         "MIT"
