--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
         "sort-packages": true
     },
     "require": {
-        "php": "^7.4 || ^8.1",
+        "php": ">=7.4",
         "magento/framework": "103.0.*",
         "magento/module-backend": "102.0.*",
         "magento/module-catalog": "104.0.*",
